BaTrung_Commit02: Create consignment from inbound detail.